# AloEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md
include/alo/: evaluate.hpp  io.hpp  movegen.hpp  nnue.hpp  search.hpp  tt.hpp  types.hpp  uci.hpp
python/: dataset.py  export_nnue.py  feature.py  generate_dataset.py  network.py  play.py  requirements.txt  test.ipynb  train.py  utils.py
python/engine_eval/: config.py  engines.json  main.py  openings.py  play.py  ratings.py  registry.py  results.py  scheduler.py  uci_engine.py
src/: attack.c  attack.cpp  bitboards.c  bitboards.cpp  board.c  board.cpp  data.c  data.cpp  evaluate.c  evaluate.cpp  hashkeys.c  hashkeys.cpp  init.c  init.cpp  io.c  io.cpp  main.c  main.cpp  makemove.c  makemove.cpp  misc.c  misc.cpp  movegen.c  movegen.cpp  nnue.cpp  perft.c  perft.cpp  perft_main.cpp  pvtable.c  pvtable.cpp  search.c  search.cpp  types.h  types.hpp  uci.c  uci.cpp  validate.c  validate.cpp
tools/: perft_suite.cpp  selfplay_main.cpp
versions/: AloEngine-v1.0.0.out
